--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,34 @@
+# Use an official Python runtime as a parent image
 FROM python:3.9-slim
 
-WORKDIR /app
-
-COPY ./requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Install system dependencies
 RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
 
+# Set working directory
+WORKDIR /app
+
+# Copy requirements first (to leverage caching)
+COPY ./requirements.txt .
+
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy app code
 COPY ./app /app/app
+
+# Copy the startup script and fix line endings
 COPY render-startup.sh .
+RUN sed -i 's/$//' render-startup.sh
 RUN chmod +x render-startup.sh
 
+# Expose backend port
 EXPOSE 8000
 
+# Env vars
 ENV DATABASE_URL="sqlite:////app/database/memory.db"
 ENV MODEL_PATH="/app/models/Phi-3-mini-4k-instruct-q4.gguf"
 ENV VECTOR_STORE_PATH="/app/data/vectors"
 ENV CONTENT_STORE_PATH="/app/content_store"
 
+# Start FastAPI
 CMD ["./render-startup.sh"]
